[package]
name = "capybot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version="0.10.9",default-features=false, features=["builder","client","gateway","model","rustls_backend"]}
tokio = { version = "1.13.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.69"